--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
 	"scripts": {
 		"test": "mocha"
@@ -6,5 +5,8 @@
 	"devDependencies": {
 		"chai": "*",
 		"mocha": "*"
+	},
+	"dependencies": {
+		"normalize-scss": "^7.0.1"
 	}
 }
